# ppxml2db

./: .gitignore  LICENSE  Makefile  README.md  account.sql  account_attr.sql  attribute_type.sql  bookmark.sql  config_entry.sql  config_set.sql  dashboard.sql  db2ppxml.py  dbhelper.py  latest_price.sql  portfolio.sql  ppxml2db.py  ppxml2db_init.py  price.sql  property.sql  pyproject.toml  security.sql  security_attr.sql  security_event.sql  taxonomy.sql  taxonomy_assignment.sql  taxonomy_assignment_data.sql  taxonomy_category.sql  taxonomy_data.sql  watchlist.sql  watchlist_security.sql  xact.sql  xact_cross_entry.sql  xact_unit.sql
ppxml2db/: db2ppxml.py  dbhelper.py  ppxml2db.py
ppxml2db/setup_scripts/: account.sql  config_set.sql  property.sql  security_prop.sql  taxonomy_data.sql  xact.sql
setup_scripts/: account.sql
